fixed scrollbar bug

--- a/articles/lujain/lujain-styles.css
+++ b/articles/lujain/lujain-styles.css
@@ -9,13 +9,14 @@ body{
     background-color: #fdffec;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     width: 100%;
 
 }
 html {
     overflow-x: hidden;
 }
+
 ::selection {
     background: #ffb7b7; 
 }
